# VectorLift

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
apps/api/: dependencies.py  main.py  middleware.py  schemas.py
apps/api/routers/: __init__.py  evaluation.py  health.py  search.py
apps/api/services/: __init__.py  evaluation_service.py  search_service.py
apps/dashboard/: api_client.py  app.py
apps/dashboard/pages/: __init__.py  experiment_comparison.py  query_analysis.py  search_demo.py  system_health.py  training_artifacts.py
apps/trainer/: hard_negative_mining.py  train_biencoder.py  train_reranker.py
apps/worker/: kafka_consumer.py  kafka_producer.py
core/common/: database.py
core/config/: settings.py
core/logging/: logger.py
core/metrics/: prometheus.py
core/schemas/: experiment.py  search.py
core/utils/: text.py  timing.py
docs/: architecture.md  deployment.md  evaluation.md  training.md
infra/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.trainer  Dockerfile.worker
infra/grafana/dashboards/: vectorlift.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/k8s/: api-deployment.yaml  dashboard-deployment.yaml  namespace.yaml
infra/prometheus/: alerts.yml  prometheus.yml
pipelines/embedding/: generator.py
pipelines/evaluation/: metrics.py  runner.py  significance.py
pipelines/indexing/: batch_indexer.py
pipelines/ingestion/: msmarco.py
retrieval/bm25/: elasticsearch_retriever.py  local_retriever.py
retrieval/dense/: dense_retriever.py  encoder.py  faiss_index.py  qdrant_retriever.py
retrieval/hybrid/: fusion.py  hybrid_retriever.py
retrieval/interfaces/: base.py
retrieval/reranker/: cross_encoder.py  pipeline.py
scripts/: bootstrap.sh  ingest_sample.py  run_evaluation.py  setup_db.py
tests/: conftest.py
tests/e2e/: test_search_pipeline.py
tests/fixtures/: sample_passages.json  sample_qrels.json
tests/integration/: test_api.py  test_bm25_local.py
tests/unit/: test_fusion.py  test_metrics.py  test_schemas.py  test_significance.py  test_text_utils.py  test_timing.py
