[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorlift"
version = "0.1.0"
description = "Production-grade Semantic Search and Ranking Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VectorLift Team", email = "aditya.kulkarni@isomer.ai" }]
keywords = ["search", "semantic", "ranking", "nlp", "embeddings", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "gunicorn>=22.0.0",
    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # ML & NLP
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    # Vector / search backends
    "elasticsearch>=8.13.0",
    "faiss-cpu>=1.8.0",
    "qdrant-client>=1.9.0",
    # Sparse retrieval
    "rank-bm25>=0.2.2",
    # Streaming & queuing
    "kafka-python>=2.0.2",
    "redis>=5.0.4",
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    # Workflow orchestration
    "prefect>=2.19.0",
    # Dashboard / visualization
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    # Observability
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    # HTTP clients & resilience
    "aiohttp>=3.9.5",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
    # Linting & formatting
    "ruff>=0.4.7",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    # Type stubs
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
    "pandas-stubs>=2.2.0",
]

gpu = [
    "torch>=2.3.0",  # Override for CUDA build — install via pip index separately
    "faiss-gpu>=1.8.0",
]

[project.scripts]
vectorlift = "vectorlift.cli:app"

[project.urls]
Homepage = "https://github.com/isomerai/vectorlift"
Repository = "https://github.com/isomerai/vectorlift"
Issues = "https://github.com/isomerai/vectorlift/issues"

# ---------------------------------------------------------------------------
# Hatch build configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["core", "retrieval", "apps", "pipelines"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
    "notebooks",
    "data",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type hints)
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN401", # allow Any
    "B008",   # do not perform function call in default arg (FastAPI uses this pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "retrieval", "apps", "pipelines"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]
"scripts/**" = ["ANN"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py311"]
line-length = 100
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | alembic/versions
  | notebooks
)/
'''

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "tests/",
    "notebooks/",
    "alembic/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = [
    "faiss",
    "rank_bm25",
    "sentence_transformers",
    "kafka",
    "elasticsearch",
    "qdrant_client",
    "prefect",
    "streamlit",
    "plotly",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=core",
    "--cov=retrieval",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Tests that require live external services (ES, Qdrant, PG)",
    "e2e: End-to-end tests through the HTTP API",
    "slow: Tests that take more than 5 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["core", "retrieval", "apps", "pipelines"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/notebooks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
